--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 RELEASE HISTORY OF THE "similarity" PACKAGE
 ===========================================
 
+Version 0.2 [2012-09-01]:
+- Add dissimilarity function
+
 Version 0.1 [2012-08-18]:
 - Initial release
 - Asymmetric indices: Jaccard, Soerensen/Dice
